@@ -1,3 +1,15 @@
+2005-10-10  Jürg Billeter  <j@bitron.ch>
+
+	reviewed by: Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard.c: (gsd_keyboard_get_hostname_key),
+	(numlock_NumLock_modifier_mask), (numlock_set_xkb_state),
+	(numlock_gconf_state_key), (numlock_get_gconf_state),
+	(numlock_set_gconf_state), (numlock_xkb_callback),
+	(numlock_install_xkb_callback), (apply_settings),
+	(gnome_settings_keyboard_init): Remember NumLock state between sessions.
+	Fixes bug #74215. Patch by Sebastian Kapfer  <sebastian_kapfer@web.de>
+
 2005-09-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-settings-font.c: (load_xcursor_theme): Don't leak
